<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unity_messages</name>
  <version>0.0.1</version>
  <description>Custom ROS 2 interface definitions for Unity ROS TCP integration for the HRELab.</description>

  <maintainer email="human.robot.empowerment@gmail.com">HRELab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export />
</package>
